1.9.6:
* Tools/balio: Fixed compatibility with recent API of blockchair.com
* "Memory.UseGoHeap" config value brought back
* peersdb.NewAddrFromString() resolves host names now, which has system-wise applications
* Source code from "modernc.org/memory" placed in "lib/others/memory" and used for UTXO records (with minor changes)
* Source code from "github.com/dchest/siphash" placed in "lib/others/siphash"
* Source code from "github.com/golang/snappy" placed in "lib/others/snappy"
* Source code from "golang.org/x/crypto/ripemd160" placed in "lib/others/ripemd160"

1.9.5 - 2018-12-31
* Client: By default native go heap is used for UTXO records. Memory.UseGoHeap config param removed.
* Client: By default support for cross-checking consensus rules against core's consensus lib is disabled.
* Tools/bdb - shows which blocks are actually stored on disk (for purged blocks db)
* Client: Reject "getheaders" and "getblocks" with more than 101 locators. Allow those without hash_stop
* Client: Added default Last Trusted Block hash also for testnet3
* Client: Allow non-zero tx counts inside "headers" message, for compatibility with the core client
* Client: Do not panic upon receiving "blocktxn" for a block that had been removed from BlocksToGet
* Client/WebUI: Cosmetic chanages in the layout
* Client: Fixed performance issue with mempool's transaction.GetAllParents() method
* Client/WebUI: Import/Export WebUI settings moved from Wallet to Home page
* lib/others/peersdb: updated list of DNS seeds
* Client: Split incomming "getdata" into chunks, to prevent send buffer from overflowing
* Client: Improved way of discovering "getheaders" and "getdata" timeouts
* Client: Improved way of handling chain splits with only one branch valid
* Lib: new script verification flag "VER_CONST_SCRIPTCODE", for compatibility with recent changes in bitcoin core
* Client: Do not ban blocks only nodes, but only those that try to use bloom filtering