@@ -79,7 +79,8 @@ func host_init() {
 		&chain.BlockDBOpts{
 			MaxCachedBlocks : int(common.CFG.Memory.MaxCachedBlks),
 			MaxDataFileSize : uint64(common.CFG.Memory.MaxDataFileMB) << 20,
-			DataFilesKeep : common.CFG.Memory.DataFilesKeep})
+			DataFilesKeep : common.CFG.Memory.DataFilesKeep,
+			DataFilesBackup : common.CFG.Memory.OldDataBackup})
 	if chain.AbortNow {
 		fmt.Printf("Blockchain opening aborted after %s seconds\n", time.Now().Sub(sta).String())
 		common.BlockChain.Close()
