@@ -268,6 +268,12 @@ Note that the current satoshi client has a "feature" that causes it to refuse co
 <td> 0</td>
 <td class="cfg_info"> If not zero, keep only such many complete data files of the blocks database (auto purging of the old blocks).</td>
 </tr>
+<tr class="even">
+<td class="cfg_name"> Memory.OldDataBackup</td>
+<td class="cfg_type"> bool</td>
+<td> false</td>
+<td class="cfg_info"> Save data files to "oldat/" folder before deleting them from the blocks database.</td>
+</tr>
 <tr class="odd">
 <td class="cfg_name"> Beeps.NewBlock</td>
 <td class="cfg_type"> bool</td>
